@@ -30,6 +30,7 @@
  - Disable some `std::filesystem` features on Windows.
  - Shut up stupid Visual Studio warnings.
  - On gcc, mark rarely-used functions as "cold," to be optimised for size.
+ - Glyph scanning for GB18030 encoding was utterly broken. (#517)
 7.6.0
  - Removed bad string conversion to `std::basic_string_view<std::byte>`. (#463)
  - Add C++20 concepts: `binary`, `char_string`, `char_strings`.
